# new_ecc

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
crates/ecc-api/: Cargo.toml
crates/ecc-api/src/: admin_server.rs  lib.rs  proxy_server.rs
crates/ecc-app/: Cargo.toml
crates/ecc-app/src/: lib.rs  playground_service.rs  preset_service.rs  provider_service.rs  quota_service.rs  session_service.rs  usage_service.rs
crates/ecc-config/: Cargo.toml
crates/ecc-config/src/: lib.rs  preset.rs  pricing.rs  provider.rs  route.rs
crates/ecc-core/: Cargo.toml
crates/ecc-core/src/: circuit_breaker.rs  coding_plan.rs  context.rs  forwarder.rs  lib.rs  logging.rs  middleware.rs  rectifier.rs  router.rs  usage.rs
crates/ecc-core/src/protocol/: anthropic.rs  mod.rs  openai.rs
crates/ecc-domain/: Cargo.toml
crates/ecc-domain/src/: lib.rs  mapping.rs  preset.rs  pricing.rs  provider.rs  repository.rs
crates/ecc-engine/: Cargo.toml
crates/ecc-engine/src/: anthropic.rs  circuit_breaker.rs  context.rs  converter.rs  forwarder.rs  lib.rs  middleware.rs  openai.rs  rectifier.rs  reqwest_forwarder.rs  router.rs  session_recorder.rs  usage_tracker.rs
crates/ecc-engine/src/port/: forward.rs  mod.rs  route.rs  session.rs  usage.rs
crates/ecc-gateway/: Cargo.toml
crates/ecc-gateway/src/: admin_server.rs  api.rs  lib.rs  playground.rs  proxy_server.rs
crates/ecc-infra/: Cargo.toml
crates/ecc-infra/src/: cache.rs  config_repo.rs  crypto.rs  lib.rs  preset_repo.rs  presets.json  provider_repo.rs  route_repo.rs  schema.rs  seed.rs  session_repo.rs  store.rs  usage_repo.rs
crates/ecc-web/: Cargo.toml
crates/ecc-web/src/: lib.rs
crates/ecc-web/src/static/: app.js  dashboard.html  style.css
doc/: ARCHITECTURE-ecc-v2.md  PROTOCOL-DESIGN.md
docs/: DDD_DESIGN.md
presets/: deepseek.toml
src/: main.rs
tests/: integration.rs
