[workspace]
members = [
    "crates/ecc-domain",
    "crates/ecc-config",
    "crates/ecc-core",
    "crates/ecc-gateway",
    "crates/ecc-web",
    ".",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
chrono = { version = "0.4", features = ["serde"] }
http = "1"
bytes = "1"
thiserror = "2"

[package]
name = "ecc"
version = "2.0.0"
edition = "2021"
description = "Lightweight local reverse proxy for Claude Code multi-provider switching"

[dependencies]
ecc-gateway = { path = "crates/ecc-gateway" }
ecc-core = { path = "crates/ecc-core" }
ecc-config = { path = "crates/ecc-config" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
bytes = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
ecc-core = { path = "crates/ecc-core" }
ecc-config = { path = "crates/ecc-config" }
ecc-gateway = { path = "crates/ecc-gateway" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
