[workspace]
members = [
    "crates/ecc-domain",
    "crates/ecc-engine",
    "crates/ecc-infra",
    "crates/ecc-app",
    "crates/ecc-api",
    "crates/ecc-web",
    ".",
]

resolver = "2"

[package]
name = "ecc"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "ecc"
path = "src/main.rs"

[dependencies]
ecc-domain = { path = "crates/ecc-domain" }
ecc-engine = { path = "crates/ecc-engine" }
ecc-infra = { path = "crates/ecc-infra" }
ecc-app = { path = "crates/ecc-app" }
ecc-api = { path = "crates/ecc-api" }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
chrono = { version = "0.4", features = ["serde"] }
http = "1"
bytes = "1"
thiserror = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
