[package]
name = "ecc-app"
version = "0.1.0"
edition = "2021"

[dependencies]
ecc-domain = { path = "../ecc-domain" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
tracing = { workspace = true }
