[package]
name = "ecc-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
ecc-core = { path = "../ecc-core" }
ecc-config = { path = "../ecc-config" }
ecc-web = { path = "../ecc-web" }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
