[package]
name = "ecc-infra"
version = "0.1.0"
edition = "2021"

[dependencies]
ecc-domain = { path = "../ecc-domain" }
rusqlite = { version = "0.39", features = ["bundled"] }
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rand = "0.8"
r2d2_sqlite = "0.33.0"
r2d2 = "0.8"
